--- a/public/data.json5
+++ b/public/data.json5
@@ -43,14 +43,17 @@
       content: {
         name: "张易",
         desc: [
-          "墨菲",
-          "易",
+          "爱德华·墨菲（Edward A. Murphy）",
+          "张易实践",
+          "对一切不可能提出挑战",
+          "提供简单，容易的实用解决方案"
         ],
         md: "鄙人张易，生于北京，纯北方汉子，苦读十二载，后求学于江苏镇江~\
-        \n工作一二载，一域两城奔波，累哉累哉，自知其中快乐~",
+        \n『**笃学明德、经世致用**』这是母校给予的八字真言，四年本科生涯、三年研究生涯，良师益友收获颇多~,\
+        \n工作一二载，两域四地奔波，累哉累哉，自知其中快乐~",
       },
       //
-//      『**厚德、求真、砺学、笃行**』这是母校给予的八字真言，四年本科生涯、三年研究生涯，良师益友收获颇多~
+//      『**笃学明德、经世致用**』这是母校给予的八字真言，四年本科生涯、三年研究生涯，良师益友收获颇多~
       //
 //      求学之际偶遇佳人，毕业之后终成正果，小窝一间、少爷一个，平平淡淡、快快乐乐~
       //
@@ -65,7 +68,7 @@
     },
     // 履历
     {
-      display: false,
+      display: true,
       anchor: {
         id: "experience",
         icon: "idcard",
@@ -77,11 +80,9 @@
       },
       cards: [
         {
-          title: "阿里巴巴（中国）网络技术有限公司",
-          //subtitle: "2018-08 至 今",
-          md: "<!--**<u>高级开发工程师</u>**-->\
-          \n\
-          \nAli的包容性带来更广的舞台与更大的成长空间，身为Alier，很荣幸能在这样的一家公司共同奋斗、发展",
+          title: "江苏科技大学",
+          subtitle: "2015-09 至 2019-06",
+          md: "<!--**<u>计算机科学与技术</u>**-->"
         },
       ],
     },
