--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "kind-of": ">=6.0.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@types/json5": "0.0.30",
     "@types/lodash": "^4.14.149",
     "animate.css": "^3.7.2",
@@ -17,6 +17,7 @@
     "axios": "^0.19.0",
     "babel-plugin-component": "^1.1.1",
     "json5": "^2.1.1",
+    "kind-of": ">=6.0.3",
     "lodash": "^4.17.15",
     "vue": "^2.6.11",
     "vue-class-component": "^7.0.2",
@@ -33,14 +34,15 @@
     "@vue/cli-plugin-vuex": "^4.1.2",
     "@vue/cli-service": "^4.1.2",
     "ali-oss": "^6.4.0",
+    "compression-webpack-plugin": "^3.1.0",
     "config-file-loader": "^1.0.0",
+    "minimist": ">=1.2.3",
     "node-sass": "^4.13.0",
     "sass": "^1.24.2",
     "sass-loader": "^8.0.0",
     "typescript": "^3.7.4",
     "underscore": "^1.8.3",
-    "vue-template-compiler": "^2.6.11",
-    "minimist": ">=1.2.3"
+    "vue-template-compiler": "^2.6.11"
   },
   "postcss": {
     "plugins": {
