增加部分数据

--- a/public/data.json5
+++ b/public/data.json5
@@ -49,7 +49,7 @@
           "提供简单，容易的实用解决方案"
         ],
         md: "鄙人张易，生于北京，纯北方汉子，苦读十二载，后求学于江苏镇江~\
-        \n『**笃学明德、经世致用**』这是母校给予的八字真言，四年本科生涯、三年研究生涯，良师益友收获颇多~,\
+        \n『**笃学明德、经世致用**』这是母校给予的八字真言，四年本科生涯, 良师益友收获颇多~,\
         \n工作一二载，两域四地奔波，累哉累哉，自知其中快乐~",
       },
       //
@@ -82,7 +82,7 @@
         {
           title: "江苏科技大学",
           subtitle: "2015-09 至 2019-06",
-          md: "<!--**<u>计算机科学与技术</u>**-->"
+          md: "**<u>计算机科学与技术</u>**"
         },
       ],
     },
